# AoC-2024

./: .gitignore  LICENSE  README.md  pyproject.toml
day_01/: part1.py  part2.py
day_02/: part1.py  part2.py
day_03/: part1.py  part2.py
day_04/: part1.py  part2.py
