[tool.poetry]
name = "aoc-2024"
version = "0.1.0"
description = "My solutions for Advent of Code 2023"
authors = ["Kamil Zych <42911623+vonHousen@users.noreply.github.com>"]
license = "MIT license"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11.3"


[tool.poetry.group.dev.dependencies]
pre-commit = "^4.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
